fixed overflowing background issue

--- a/src/components/header/menu/Background/style.scss
+++ b/src/components/header/menu/Background/style.scss
@@ -3,8 +3,12 @@
   grid-column: 3;
   position: relative;
   z-index: 1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .three_canvas {
-  max-width: 100%;
+  width: 100%;
+  height: 400%;
 }
